<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DayCharsFragment">

    <DatePicker
        android:id="@+id/base_date_date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <Button
        android:id="@+id/calculate_levels_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate_levels_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/base_date_date_picker"
        app:layout_constraintRight_toRightOf="parent"
        />

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/calculate_levels_button"
        android:orientation="horizontal">


    <TextView
        android:id="@+id/emotional_level_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emotional_level"
        android:textAlignment="center"
        android:layout_weight="1"
        />

    <TextView
        android:id="@+id/intellectual_level_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intellectual_level"
        android:textAlignment="center"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/physical_level_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/physical_level"
        android:textAlignment="center"
        android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/description_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout"
        />

    <Button
        android:id="@+id/share_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/share_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>